chief scientist list lazy model + lazy model refactoring

--- a/Jama/src/main/webapp/agreementList.xhtml
+++ b/Jama/src/main/webapp/agreementList.xhtml
@@ -4,8 +4,7 @@
 
 <f:metadata>
 	<f:viewParam name="chief.id" value="#{contractListPCB.lazyModel.filterChiefId}" valueChangeListener="#{contractListPCB.lazyModel.filterOnReload}" />
-	<f:viewParam name="company.id" value="#{contractListPCB.lazyModel.filterCompanyId}"
-		valueChangeListener="#{contractListPCB.lazyModel.filterOnReload}" />
+	<f:viewParam name="company.id" value="#{contractListPCB.lazyModel.filterCompanyId}" valueChangeListener="#{contractListPCB.lazyModel.filterOnReload}" />
 	<f:viewParam name="fmindate" value="#{contractListPCB.lazyModel.filterMinDate}" converter="#{dateFromLong}"
 		valueChangeListener="#{contractListPCB.lazyModel.filterOnReload}" />
 	<f:viewParam name="fmaxdate" value="#{contractListPCB.lazyModel.filterMaxDate}" converter="#{dateFromLong}"
@@ -21,44 +20,18 @@
 	<h:outputStylesheet name="home.css" library="css" />
 	<h:outputStylesheet name="table.css" library="css" />
 
+	<h:outputScript name="filters.js" library="js" />
+	<h:outputScript name="hideShow.js" library="js" />
+
+
 	<script type="text/javascript">
 		function setRowEvent(){
-			jQuery('#agreementTable tr')
-				.mouseover(function(){
-								jQuery(this).find(".list-row-button").show();
-							})
-				.mouseout(function(){
-								jQuery(this).find(".list-row-button").hide();
-							})
-				.click(function(e){
-							jQuery("#tableContextMenu").hide();
-							jQuery("#agreementTable tr").removeClass("ui-state-highlight");
-							e.stopPropagation();
-						})
-				.removeClass("ui-state-highlight");
+			setHideShow();
 		}
 
-		function setFilters(chiefFilter, companyFilter){
-			jQuery("#agreementTable\\:agrTableChiefColumn\\:filter").val(chiefFilter);
-			jQuery("#agreementTable\\:agrTableCompanyColumn\\:filter").val(companyFilter);
-		}
-
-		function calendarFilter(event, agrTable){
-			event.stopPropagation();
-			agrTable.filter(); 
-			return false;
-		}
-
-		function calendarReset(event, firstDate, lastDate, agrTable){ 
-			firstDate.setDate(null); 
-			lastDate.setDate(null);
-			return calendarFilter(event, agrTable);
-		}
-
-		jQuery(document).ready(function(){
-									setRowEvent();
-								});
-		
+		jQuery(document).ready(function() {
+			setRowEvent();
+		});
 	</script>
 </h:head>
 <h:body onload="setFilters('#{contractListPCB.lazyModel.filterChiefId}', '#{contractListPCB.lazyModel.filterCompanyId}');">
@@ -66,13 +39,13 @@
 	<h:form prependId="false">
 		<input type="hidden" name="cid" value='#{contractListPCB.conversation.id}' />
 
-		<p:contextMenu id="tableContextMenu" widgetVar="w_tableContextMenu" for="agreementTable">
-			<p:menuitem value="#{msgs.view}" icon="ui-icon-search" actionListener="#{contractListPCB.viewAgreement()}" />
-			<p:menuitem value="#{msgs.edit}" icon="ui-icon-wrench" action="#{contractListPCB.editAgreement()}" />
-			<p:menuitem value="#{msgs.remove}" icon="ui-icon-trash" action="#{contractListPCB.deleteAgreement()}" />
+		<p:contextMenu id="tableContextMenu" styleClass="contextMenu" widgetVar="w_tableContextMenu" for="agreementTable">
+			<p:menuitem process="@form" value="#{msgs.view}" icon="ui-icon-search" action="#{contractListPCB.viewAgreement()}" />
+			<p:menuitem process="@form" value="#{msgs.edit}" icon="ui-icon-wrench" action="#{contractListPCB.editAgreement()}" />
+			<p:menuitem process="@form" value="#{msgs.remove}" icon="ui-icon-trash" oncomplete="w_confirm.show();" />
 		</p:contextMenu>
 
-		<p:dataTable id="agreementTable" binding="#{contractListPCB.lazyModel.dataTable}" var="agr" widgetVar="w_agrTable" lazy="true"
+		<p:dataTable id="agreementTable" styleClass="hideShow" binding="#{contractListPCB.lazyModel.dataTable}" var="agr" widgetVar="w_agrTable" lazy="true"
 			value="#{contractListPCB.lazyModel}" emptyMessage="#{msgs.noAgrFound}" paginator="true" rows="10" rowsPerPageTemplate="5,10,15"
 			paginatorTemplate="{RowsPerPageDropdown} {PreviousPageLink} {NextPageLink}" selection="#{contractListPCB.lazyModel.selectedValue}"
 			selectionMode="single" rowKey="#{agr.id}" sortOrder="descending">
@@ -85,13 +58,13 @@
 				<h:selectBooleanCheckbox id="closedAgr" value="#{agr.closed}" disabled="true" />
 			</p:column>
 
-			<p:column id="agrTableChiefColumn" filterBy="#{agr.chief.id}" headerText="#{msgs.chief}" filterMatchMode="exact"
+			<p:column id="agrTableChiefColumn" styleClass="chiefFilterColumn" filterBy="#{agr.chief.id}" headerText="#{msgs.chief}" filterMatchMode="exact"
 				filterOptions="#{utilPB.filterChiefItems}">
 				<h:outputText value="#{agr.chief.completeName}" />
 			</p:column>
 
-			<p:column id="agrTableCompanyColumn" filterBy="#{agr.company.id}" headerText="#{msgs.company}" filterMatchMode="exact"
-				filterOptions="#{utilPB.filterCompanyItems}">
+			<p:column id="agrTableCompanyColumn" styleClass="companyFilterColumn" filterBy="#{agr.company.id}" headerText="#{msgs.company}"
+				filterMatchMode="exact" filterOptions="#{utilPB.filterCompanyItems}">
 				<h:outputText value="#{agr.company.name}" />
 			</p:column>
 
