--- a/Jama/src/main/webapp/chiefContractList.xhtml
+++ b/Jama/src/main/webapp/chiefContractList.xhtml
@@ -2,16 +2,139 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui">
 
+<f:metadata>
+	<f:viewParam name="company.id" value="#{chiefContractListPCB.lazyModel.filterCompanyId}"
+		valueChangeListener="#{chiefContractListPCB.lazyModel.filterOnReload}" />
+	<f:viewParam name="fcontrmindate" value="#{chiefContractListPCB.lazyModel.filterContractMinDate}" converter="#{dateFromLong}"
+		valueChangeListener="#{chiefContractListPCB.lazyModel.filterOnReload}" />
+	<f:viewParam name="fcontrmaxdate" value="#{chiefContractListPCB.lazyModel.filterContractMaxDate}" converter="#{dateFromLong}"
+		valueChangeListener="#{chiefContractListPCB.lazyModel.filterOnReload}" />
+	<f:viewParam name="finstmindate" value="#{chiefContractListPCB.lazyModel.filterInstMinDate}" converter="#{dateFromLong}"
+		valueChangeListener="#{chiefContractListPCB.lazyModel.filterOnReload}" />
+	<f:viewParam name="finstmaxdate" value="#{chiefContractListPCB.lazyModel.filterInstMaxDate}" converter="#{dateFromLong}"
+		valueChangeListener="#{chiefContractListPCB.lazyModel.filterOnReload}" />
+	<f:viewParam name="first" value="#{opContractListPCB.lazyModel.pageFirst}" valueChangeListener="#{chiefContractListPCB.lazyModel.filterOnReload}" />
+	<f:viewParam name="rows" value="#{opContractListPCB.lazyModel.pageRows}" valueChangeListener="#{chiefContractListPCB.lazyModel.filterOnReload}" />
+
+	<f:event listener="#{chiefContractListPCB.lazyModel.loadTableFilters}" type="preRenderView" />
+</f:metadata>
+
 <h:head>
+	<h:outputStylesheet name="home.css" library="css" />
+	<h:outputStylesheet name="table.css" library="css" />
+
+	<h:outputScript name="filters.js" library="js" />
+	<h:outputScript name="hideShow.js" library="js" />
+
+
+	<script type="text/javascript">
+		jQuery(document).ready(function() {
+			setHideShow();
+		});
+	</script>
+
 </h:head>
-<h:body>
+
+<h:body onload="setCompanyFilter('#{chiefContractListPCB.lazyModel.filterCompanyId}');">
+
 	<h:form prependId="false">
-	
-		<p:dataTable styleClass="hideShow" binding="#{contractListPCB.lazyModel.dataTable}" var="agr" widgetVar="w_agrTable" lazy="true"
-			value="#{contractListPCB.lazyModel}" emptyMessage="#{msgs.noAgrFound}" paginator="true" rows="10" rowsPerPageTemplate="5,10,15"
-			paginatorTemplate="{RowsPerPageDropdown} {PreviousPageLink} {NextPageLink}" selection="#{contractListPCB.lazyModel.selectedValue}"
-			selectionMode="single" rowKey="#{agr.id}" sortOrder="descending">
+		<input type="hidden" name="cid" value='#{chiefContractListPCB.conversation.id}' />
+
+		<p:contextMenu styleClass="contextMenu" widgetVar="w_tableContextMenu" for="chiefContractList">
+			<p:menuitem process="@form" value="#{msgs.view}" icon="ui-icon-search" action="#{chiefContractListPCB.viewAgreement()}" />
+		</p:contextMenu>
+
+		<p:dataTable id="chiefContractList" styleClass="hideShow" binding="#{chiefContractListPCB.lazyModel.dataTable}" var="contract"
+			widgetVar="w_chContrList" lazy="true" value="#{chiefContractListPCB.lazyModel}" emptyMessage="#{msgs.noAgrFound}" paginator="true" rows="10"
+			rowsPerPageTemplate="5,10,15" paginatorTemplate="{RowsPerPageDropdown} {PreviousPageLink} {NextPageLink}"
+			selection="#{chiefContractListPCB.lazyModel.selectedValue}" selectionMode="single" rowKey="#{contract.id}">
+
+			<p:ajax event="filter" oncomplete="setHideShow();" />
+			<p:ajax event="page" oncomplete="setHideShow();" />
+
+			<p:column>
+				<h:selectBooleanCheckbox value="#{contract.closed}" disabled="true" />
+			</p:column>
+
+			<p:column styleClass="companyFilterColumn" filterBy="#{contract.company.id}" headerText="#{msgs.company}" filterMatchMode="exact"
+				filterOptions="#{utilPB.filterCompanyItems}">
+				<h:outputText value="#{contract.company.name}" />
+			</p:column>
+
+			<p:column headerText="fffffffatturato">
+				<h:outputText value="#{contract.turnOver}" />
+			</p:column>
+
+			<p:column headerText="Sganciate la grana!">
+				<h:outputText value="Residuo. Quale campo è?" />
+			</p:column>
+
+			<p:column>
+
+				<f:facet name="header">
+					<h:outputText value="#{msgs.deadlineDate}" />
+					<br />
+					<h:form id="calendarFilters">
+						<div style="display: block; width: 90%; margin: auto;">
+							<p:calendar styleClass="calendarFilter" widgetVar="w_firstContractDate" showOn="both" showOtherMonths="true"
+								value="#{chiefContractListPCB.lazyModel.filterContractMinDate}" pattern="dd/MM/yyyy" readonlyInput="true">
+							</p:calendar>
+							-
+							<p:calendar styleClass="calendarFilter" widgetVar="w_lastContractDate" showOn="both" showOtherMonths="true"
+								value="#{chiefContractListPCB.lazyModel.filterContractMaxDate}" pattern="dd/MM/yyyy" readonlyInput="true">
+							</p:calendar>
+						</div>
+						<p:commandButton id="calendarFilterBtn" styleClass="filter-buttons" value="#{msgs.filter}"
+							onclick="return calendarFilter(arguments[0], w_chContrList);" />
+						<p:commandButton id="calendarResetBtn" styleClass="filter-buttons" value="#{msgs.reset}"
+							onclick="return calendarReset(arguments[0], w_firstContractDate, w_lastContractDate, w_chContrList);" />
+					</h:form>
+				</f:facet>
+
+				<h:outputText value="#{contract.deadlineDate}">
+					<f:convertDateTime locale="it" dateStyle="full" />
+				</h:outputText>
+
+			</p:column>
+
+			<p:column>
+
+				<f:facet name="header">
+					<h:outputText value="Qualcosa come 'Prossima data di scadenza'" />
+					<br />
+					<h:form id="calendarFilters">
+						<div style="display: block; width: 90%; margin: auto;">
+							<p:calendar styleClass="calendarFilter" widgetVar="w_firstInstDate" showOn="both" showOtherMonths="true"
+								value="#{chiefContractListPCB.lazyModel.filterInstMinDate}" pattern="dd/MM/yyyy" readonlyInput="true">
+							</p:calendar>
+							-
+							<p:calendar styleClass="calendarFilter" widgetVar="w_lastInstDate" showOn="both" showOtherMonths="true"
+								value="#{chiefContractListPCB.lazyModel.filterInstMaxDate}" pattern="dd/MM/yyyy" readonlyInput="true">
+							</p:calendar>
+						</div>
+						<p:commandButton id="calendarFilterBtn" styleClass="filter-buttons" value="#{msgs.filter}"
+							onclick="return calendarFilter(arguments[0], w_chContrList);" />
+						<p:commandButton id="calendarResetBtn" styleClass="filter-buttons" value="#{msgs.reset}"
+							onclick="return calendarReset(arguments[0], w_firstInstDate, w_lastInstDate, w_chContrList);" />
+					</h:form>
+				</f:facet>
+
+				<h:outputText value="#{utilPB.findClosestDeadline(contract, chiefContractListPCB.lazyModel.filterInstMinDate)}">
+					<f:convertDateTime locale="it" dateStyle="full" />
+				</h:outputText>
+
+				<p:commandButton styleClass="list-row-button" process="@form" icon="ui-icon-search" action="#{chiefContractListPCB.viewAgreement()}">
+					<f:setPropertyActionListener value="#{contract}" target="#{chiefContractListPCB.lazyModel.selectedValue}" />
+				</p:commandButton>
+
+			</p:column>
+
 		</p:dataTable>
+
+		<br />
+
+		<p:commandButton action="#{chiefContractListPCB.backToHome()}" value="Home" immediate="true" />
+
 
 	</h:form>
 
