--- a/Jama/src/main/webapp/agreementList.xhtml
+++ b/Jama/src/main/webapp/agreementList.xhtml
@@ -72,7 +72,8 @@
 			<p:column id="agrTableDateColumn" sortBy="#{agr.approvalDate}">
 
 				<f:facet name="header">
-	                	#{msgs.approvalDate}  
+	                <h:outputText value="#{msgs.deadlineDate}" />
+					<br /> 
 					<h:form id="calendarFilters">
 						<div style="display: block; width: 90%; margin: auto;">
 							<p:calendar id="firstDate" styleClass="calendarFilter" widgetVar="w_firstDate" value="#{opContractListPCB.lazyModel.filterMinDate}"
@@ -90,7 +91,7 @@
 					</h:form>
 				</f:facet>
 
-				<h:outputText value="#{agr.approvalDate}">
+				<h:outputText value="#{agr.deadlineDate}">
 					<f:convertDateTime locale="it" dateStyle="full" />
 				</h:outputText>
 
