--- a/Jama/src/main/webapp/chiefContractList.xhtml
+++ b/Jama/src/main/webapp/chiefContractList.xhtml
@@ -54,7 +54,7 @@
 			<p:ajax event="filter" oncomplete="setHideShow();" />
 			<p:ajax event="page" oncomplete="setHideShow();" />
 
-			<p:column filterBy="#{contract.closed}" filterOptions="#{utilPB.getBooleanFilter('Kiusa', 'Aprt')}">
+			<p:column filterBy="#{contract.closedString}" filterOptions="#{utilPB.getBooleanFilter('Kiusa', 'Aprt')}">
 				<h:selectBooleanCheckbox value="#{contract.closed}" disabled="true" />
 			</p:column>
 
