--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -14,6 +14,7 @@
 		<h:commandButton action="#{contractManager.createFunding()}" value="Crea Contributo" styleClass="buttons" />
 		<h:button value="Lista convenzioni" outcome="agreementList" styleClass="buttons" />
 		<h:button value="Scadenzario" outcome="agreementSchedule" styleClass="buttons" />
+		<h:button value="Lista convenzioni docente" outcome="chiefContractList" styleClass="buttons" />
 	</h:form>
 </h:body>
 
