--- a/Jama/src/main/webapp/resources/sections/agreementWizLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizLastStep.xhtml
@@ -4,8 +4,15 @@
 	<p:tab id="tabEnd" title="#{msgs.end__tab}">
 
 		<h:outputText value="#{msgs.agrCongr}" />
+
 		<br />
+
 		<p:commandButton value="#{msgs.save}" action="#{agreementWizardPB.save()}" ajax="false" />
+
+		<br />
+
+		<p:commandButton styleClass="list-row-button" icon="ui-icon-mail-closed" action="#{mailSender.notifyClosure(contractManager.contract)}"
+			value="Test mail" />
 
 	</p:tab>
 
