--- a/Jama/src/main/webapp/resources/sections/installmentWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizData.xhtml
@@ -14,7 +14,7 @@
 
 	<p:panel header="#{msgs.data_header}">
 
-		<h:panelGrid id="instPanelGrid">
+		<p:panelGrid id="instPanelGrid">
 
 			<p:row>
 				<p:column>
@@ -305,7 +305,7 @@
 				validator="#{instDataPB.validateAmount}" />
 			<p:message styleClass="errorMessage" for="amountCheck" />
 
-		</h:panelGrid>
+		</p:panelGrid>
 
 	</p:panel>
 
