--- a/Jama/src/main/webapp/resources/sections/agreementWizLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizLastStep.xhtml
@@ -4,6 +4,8 @@
 	<p:tab id="tabEnd" title="#{msgs.end__tab}">
 
 		<h:outputText value="#{msgs.agrCongr}" />
+		
+		<p:growl autoUpdate="true" />
 
 		<br />
 
