--- a/Jama/src/main/webapp/resources/sections/agreementWizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizShareTable.xhtml
@@ -194,7 +194,7 @@
 
 		<br />
 
-		<p:panelGrid id="personnalShareInput" style="width: 100%">
+		<p:panelGrid id="personnalShareInput" style="width: 100%" rendered="#{not cc.attrs.editingDisable}">
 
 			<p:row>
 				<p:column width="20%">
