--- a/Jama/src/main/webapp/agreementEdit.xhtml
+++ b/Jama/src/main/webapp/agreementEdit.xhtml
@@ -1,29 +1,25 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:sections="http://java.sun.com/jsf/composite/sections"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:sections="http://java.sun.com/jsf/composite/sections"
 	xmlns:dialogs="http://java.sun.com/jsf/composite/dialogs">
 
 <h:head>
 	<h:outputStylesheet name="agreementWiz.css" library="css" />
+
+	<h:outputScript name="hideShow.js" library="js" />
 </h:head>
-<h:body>
+
+<h:body onload="setHideShow();">
 
 	<h:form id="agreementEdit">
 
-		<input type="hidden" name="cid"
-			value='#{contractManager.conversation.id}' />
+		<input type="hidden" name="cid" value='#{contractManager.conversation.id}' />
 
-		<p:tabView dynamic="true"
-			activeIndex="#{agreementEditPB.currentTabIndex}">
+		<p:tabView dynamic="true" activeIndex="#{agreementEditPB.currentTabIndex}">
 			<p:ajax event="tabChange" listener="#{agreementEditPB.handleFlow}"></p:ajax>
 
 			<p:tab id="tabDati" title="#{msgs.data_Tab}">
 				<sections:agreementWizData editingDisable="false" />
-
 			</p:tab>
 
 
@@ -32,8 +28,7 @@
 			</p:tab>
 
 			<p:tab id="tabInstallments" title="#{msgs.installmentsList_Tab}">
-				<sections:agreementInstallmentsList
-					installmentOutcome="agreementEdit" editingDisable="false">
+				<sections:agreementInstallmentsList installmentOutcome="agreementEdit" editingDisable="false">
 				</sections:agreementInstallmentsList>
 
 
@@ -47,28 +42,21 @@
 			</p:tab>
 
 			<p:tab id="tabAttachs" title="#{msgs.attachments_Tab}">
-			<sections:agreementWizAttachments
-					editingDisable="false">
+				<sections:agreementWizAttachments editingDisable="false">
 				</sections:agreementWizAttachments>
 			</p:tab>
 
 		</p:tabView>
 
 
-		<p:commandButton type="button" value="#{msgs.cancel}"
-			onclick="w_confirm.show();" />
+		<p:commandButton type="button" value="#{msgs.cancel}" onclick="w_confirm.show();" />
 
-		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.cancel}"
-			severity="alert" widgetVar="w_confirm">
-			<p:commandButton value="#{msgs.yes}"
-				action="#{agreementEditPB.cancel()}" immediate="true"
-				oncomplete="w_confirm.hide()" />
-			<p:commandButton value="#{msgs.no}" onclick="w_confirm.hide();"
-				type="button" />
+		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.cancel}" severity="alert" widgetVar="w_confirm">
+			<p:commandButton value="#{msgs.yes}" action="#{agreementEditPB.cancel()}" immediate="true" oncomplete="w_confirm.hide()" />
+			<p:commandButton value="#{msgs.no}" onclick="w_confirm.hide();" type="button" />
 		</p:confirmDialog>
 
-		<p:commandButton value="#{msgs.save}"
-			action="#{agreementEditPB.save()}" ajax="false" />
+		<p:commandButton value="#{msgs.save}" action="#{agreementEditPB.save()}" ajax="false" />
 
 
 
