--- a/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
@@ -13,7 +13,7 @@
 
 		<p:growl id="messages" showDetail="true" />
 
-		<h:outputText value="Allegati caricati: " />
+		<h:outputText value="#{msgs.attachments_list_title}" />
 
 		<p:dataTable id="attchsList" value="#{attachmentsPB.attachments}" var="file" emptyMessage="#{msgs.noAttachmentFound}">
 			<p:column>
@@ -33,9 +33,10 @@
 				<p:tooltip for="removeButton" value="#{msgs.remove}" showEffect="fade" hideEffect="fade" />
 			</p:column>
 		</p:dataTable>
+		
 
-		<p:fileUpload auto="false" fileUploadListener="#{attachmentsPB.handleFileUpload}" mode="advanced" dragDropSupport="true"
-			update="messages attchsList" sizeLimit="1000000" cancelLabel="#{msgs.remove}" uploadLabel="#{msgs.load}" label="#{msgs.choose}"
+		<p:fileUpload id="fileUpload" label="#{msgs.add_attachments}" auto="true" fileUploadListener="#{attachmentsPB.handleFileUpload}" multiple="true" showButtons="false" dragDropSupport="true"
+			update="messages attchsList" sizeLimit="1000000" cancelLabel="#{msgs.remove}" uploadLabel="#{msgs.load}" 
 			invalidSizeMessage="#{msgs.invalidFileSize}" invalidFileMessage="#{msgs.invalidFile}" rendered="#{cc.attrs.editingDisable == false}" />
 
 
