--- a/Jama/src/main/webapp/agreementList.xhtml
+++ b/Jama/src/main/webapp/agreementList.xhtml
@@ -117,7 +117,7 @@
 			<p:commandButton value="#{msgs.no}" onclick="w_confirm.hide();" type="button" />
 		</p:confirmDialog>
 
-		<p:commandButton action="#{opContractListPCB.backToHome()}" value="Home" immediate="true" />
+		<p:commandButton action="#{opContractListPCB.backToHome()}" value="#{msgs.home}" immediate="true" />
 
 	</h:form>
 
